<resources>
    <string name="app_name">Registration App</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_text">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Enter Full Name</string>
    <string name="gender">Gender</string>
    <string name="student_id">Student ID</string>
    <string name="e_mail">E-mail</string>
    <string name="school">School</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>